--- a/ColorChangerPCFDateInput/styles.css
+++ b/ColorChangerPCFDateInput/styles.css
@@ -1,4 +1,4 @@
-.textInputControlDecimalCss {
+.datePCFInputControl {
     text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     white-space: normal;
@@ -26,7 +26,7 @@
     outline: none !important;
   }
   
-  .textInputControlDecimalCss:hover{
+  .datePCFInputControl:hover{
     border-color: rgb(102, 102, 102);
     border-width: 1px;
     border-style: solid;
@@ -45,15 +45,4 @@
     height: 2.5rem;
     box-sizing: border-box;
     background-color: rgb(255, 255, 255);
-  }
-
-  .textInputControlDecimalCss::-webkit-outer-spin-button,
-  .textInputControlDecimalCss::-webkit-inner-spin-button {
-      /* display: none; <- Crashes Chrome on hover */
-      -webkit-appearance: none;
-      margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-  }
-  
-  input[type=number] {
-      -moz-appearance: textfield; /* Firefox */
   }
